--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -9,14 +9,21 @@
   <!--</div>-->
 <!--</div>-->
 
-<div> I'm the first class practise!</div>
-<div style="width: 1024px; height: 768px; background-color: green">
-  <div style="width: 400px; height: 300px; background-color: white; top: 30%; left:30%; position: relative">
-    <div style="top: 60px; left: 80px; position: relative">
-      <div style="margin-bottom: 20px"><input placeholder="username" style="height: 40px; width: 250px; background-color: lightgray"></div>
-      <div style="margin-bottom: 20px"><input type="password" placeholder="password" style="height: 40px; width: 250px; background-color: lightgray"></div>
-      <div style="margin-bottom: 20px"><button class="btn-primary" style="width: 250px">Login</button></div>
-      <div style="margin-left: 25px"><span style="color: gray; font-size: 5px"> Not Registered? </span><a style="color: greenyellow; font-size: 5px" href="www.twitter.com">Create an account</a> </div>
-    </div>
+<!--<div> I'm the first class practise!</div>-->
+<div class="main_container">
+  <div class="login_container">
+      <div class="login_box">
+        <input placeholder="username" class="login_input">
+      </div>
+      <div class="login_box">
+        <input type="password" placeholder="password" class="login_input">
+      </div>
+      <div class="login_box">
+        <button class="login_button">Login</button>
+      </div>
+      <div class="link_container">
+        <span class="login_text"> Not Registered? </span>
+        <a class="login_link" href="www.twitter.com"> Create an account </a>
+      </div>
   </div>
 </div>
